# ConsoleApp

./: CMakeLists.txt  Engine.code-workspace  LICENSE  README.md
Project/: CMakeLists.txt
Project/assets/: accounts.csv  cinema.csv
Project/include/: Account.hpp  Application.hpp  Base.hpp  Cinema.hpp  Controller.hpp  Csv_Parser.hpp  MenuElem.hpp  MenuScene.hpp  Scene.hpp  TextTable.hpp
Project/src/: Account.cpp  Application.cpp  Cinema.cpp  Controller.cpp  Csv_Parser.cpp  Csv_Parser.сpp  MenuElem.cpp  MenuScene.cpp  Scene.cpp  TextTable.cpp  main.cpp
